[package]
name = "dockyard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version='4',features=['openssl']}
openssl = {version="0.10",features=['v110']}
actix-utils = "3.0.0"
actix-rt = "2.6.0"
actix-files = "0.6.0"
futures-util = "0.3.21"
sha256 = "1.0.3"
mime = "0.3.16"
serde={version="1.0.136",features=["derive"]}
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde_json = "1.0.79"
uuid = {version="0.8.2",features=["serde","v4"]}
base64 = "0.13.0"
jsonwebtoken = "8.0.1"
diesel={version="1.3.3",features=["mysql","r2d2","chrono"]}
tokio = {version="1.13",features=["full"]}
tokio-stream = "0.1.8"
tracing = "0.1.31"
tracing-subscriber = {version="0.3",features=["env-filter"]}
chrono = "0.4"
redis = {version="0.21",features=["r2d2"]}